# beautiful-chinese-resume

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
examples/: sample_resume.json
references/: content-rules.md  layout-rules.md  targeting-keywords.md
scripts/: build_resume_docx.py  lint_resume_json.py  validate_skill.py  verify_resume_docx.py
tests/: test_resume_scripts.py  test_skill_metadata.py
