[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beautiful-chinese-resume"
version = "0.1.0"
description = "Codex skill for polished one-page Chinese DOCX resumes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "python-docx>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/hao0401/beautiful-chinese-resume"
Repository = "https://github.com/hao0401/beautiful-chinese-resume"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = []
py-modules = []
